<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e2a600"
    tools:context=".AuthActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/auto_registration"
        android:textColor="#fdfdfd"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_login"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"/>

    <EditText
        android:id="@+id/user_password_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="#6a6a6a"
        android:hint="@string/enter_password"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"/>

    <Button
        android:id="@+id/button_auth"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_auth"
        android:backgroundTint="#201E28"
        android:textColor="#fafafa"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/linkToReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter"
        android:text="@string/registration"
        android:textColor="#fdfdfd"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>